k8s-demo/trace-demo/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: $namespace
  labels:
    name: $namespace
    app: trace-demo
